--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -84,7 +84,7 @@
 				<div class="recommend-wrap">
 					<div class="title">
 						<h3>推荐商品</h3>
-						<a href="#"><span class="more">更多</span></a>
+						<a href="/mobile/goods/goodsList"><span class="more">更多</span></a>
 					</div>
 					<div class="recommend-list">
 						<ul>
@@ -98,7 +98,7 @@
 									<p class="dec">{$vo.desc}</p>
 									<div class="buy">
 										<span class="price">¥{$vo.price}</span>
-										<a href="#" class="butBtn">立即购买</a>
+										<a href="/mobile/goods/goodinfo?id={$vo.id}" class="butBtn">立即购买</a>
 									</div>
 								</div>
 							</li>
