--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -72,13 +72,13 @@
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li onclick="window.location.href='/mobile/user/evaluation'">
+				<!-- <li onclick="window.location.href='/mobile/user/evaluation'">
 
 					<img class="img1" src="__STATIC__/img/my/pingjia@2x.png" />
 					<a>我的评价</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
-				</li>
+				</li> -->
 				<li onclick="window.location.href='/mobile/user/qr_code'">
 
 					<img class="img1" src="__STATIC__/img/my/erweima@2x.png" />
