--- a/application/admin/view/money/recharge.html
+++ b/application/admin/view/money/recharge.html
@@ -36,6 +36,7 @@
             <table class="table table-border table-bordered table-hover table-bg table-sort">
                 <thead>
                     <tr class="text-c">
+                        <th width="80">ID</th>
                         <th width="150">会员名</th>
                         <th width="130">充值金额</th>
                         <th width="150">说明</th>
@@ -50,6 +51,7 @@
                     {if condition="isset($list)"}
                     {foreach name="list" item="vo"}
                     <tr class="text-c">
+                        <td>{$vo.id}</td>
                         <td>{$vo.nickname}</td>
                         <td>{$vo.money}</td>
                         <td>{$vo.body}</td>
