网站标题等设置

--- a/application/admin/view/layout/head.html
+++ b/application/admin/view/layout/head.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="Bookmark" href="/__STATIC__/favicon.ico" >
-    <link rel="Shortcut Icon" href="/__STATIC__/favicon.ico" />
+    <link rel="Bookmark" href="{$web_setting.title_logo}" >
+    <link rel="Shortcut Icon" href="{$web_setting.title_logo}" />
     <!--[if lt IE 9]>
     <script type="text/javascript" src="lib/html5shiv.js"></script>
     <script type="text/javascript" src="lib/respond.min.js"></script>
@@ -19,9 +19,9 @@
     <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
     <script>DD_belatedPNG.fix('*');</script>
     <![endif]-->
-    <title>H-ui.admin v3.1</title>
-    <meta name="keywords" content="H-ui.admin v3.1,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
-    <meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
+    <title>{$web_setting.web_name}</title>
+    <meta name="keywords" content="{$web_setting.web_name}">
+    <meta name="description" content="{$web_setting.web_name}">
 </head>
 <style>
     .no-data{
