--- a/application/admin/view/login/index.html
+++ b/application/admin/view/login/index.html
@@ -44,7 +44,7 @@
             </form>
         </div>
     </div>
-    <div class="footer">Copyright 你的公司名称 by H-ui.admin v3.1</div>
+    <div class="footer">{$web_setting.copyright}{$web_setting.icp}</div>
     {include file='layout/footer' /}
     <!-- <script type="text/javascript" src="/__STATIC__/lib/layer/2.4/layer.js"></script> -->
     <!-- <script type="text/javascript" src="/__STATIC__/lib/jquery/1.9.1/jquery.min.js"></script>
